@@ -4,11 +4,7 @@ AUX unrealircd-system-cares.patch 4850 RMD160 6bd9456bda2b1dc233cf7ad97c60c0ee11
 AUX unrealircd-system-tre.patch 2238 RMD160 bfac0ded81b84eed017c8fac8ee6bffaa0a6c73a SHA1 d61c537e780016dd1bf78cfac15025cfea3569a3 SHA256 91a11df3fa1db0924311cd02ba7d0cb1a0b26066e9c65bad5756226baf08e9c9
 AUX unrealircd.confd 499 RMD160 666439c6e992d3314f8694ba58e8f3e018421f1c SHA1 5cb49d7e9a79c7f8e0b2182dff47811a2f3fb885 SHA256 ae6ce779fae68c1380a7d37950c5ef3b695e434bb435dcdc0f6d3d2282f72582
 AUX unrealircd.rc 640 RMD160 186125558866976380eddae397aba4534a088732 SHA1 815d6950ddb79ca86fa8c887a4386ae9ddd58abe SHA256 a1ac6330e573dc5429153de98c9a8619a92d7ae3502a06e47f392dcaf90f2b07
-DIST Unreal3.2.7.tar.gz 2801622 RMD160 49e00dbe4fdda672b20be16ceb116971f514d62b SHA1 a6c83c186008c429bc5a476fc0b9e3b174092efb SHA256 f80078da5e9efa1487ab22957aeb295f94c2d4efd144f825f1efc5ee8df72d46
 DIST Unreal3.2.8.1.tar.gz 2866456 RMD160 c8e76239e33ba170743f2ddae6bc24782064f105 SHA1 363c3c995bb38cf601f409610ce1937a0002c419 SHA256 009add8da68b6fb66608d06302e59fa9fb994f901cbd92e6f4f10963f2077741
-DIST Unreal3.2.8.tar.gz 2872378 RMD160 bcf8b2bb7475aad3b25dd63b48696c39dcbd4243 SHA1 4b03254d5e19b827f0653a083c0b7f895914b8be SHA256 99fb064a356ed86aa135d2c382a3f10a9b98de6272be6a5bd0f80e2179100958
-EBUILD unrealircd-3.2.7-r2.ebuild 4498 RMD160 11c41e7eb46a1874db6c07a27d8a2f5fd6471e81 SHA1 f8da6b1dd0a50d8dd894baddecf4d771aedef964 SHA256 1109ae4a6401e0a5147999a8d8d483b2f358a3bdb9f7f4d153a9081a55920dcf
-EBUILD unrealircd-3.2.8.1.ebuild 4696 RMD160 a31e0c8f1769dda4750c6cdbb4b70f58ed549e39 SHA1 dc196c57e2902a194227b3731a5195fe9a700d21 SHA256 05bef235f3f511bcb12582f0c5a36bc148579f63e42d76c0f09c76bec66d8a9d
-EBUILD unrealircd-3.2.8.ebuild 4524 RMD160 35ab5f1a60cf6372413bb50d293e4d19bf31d632 SHA1 5354ca5ea5d29af785da43ac37a3a4be0f745e10 SHA256 8ea7a8d2285486d9633042ea1109acc652ca9b9f40f8355b62f4eb64ab0932dc
-MISC ChangeLog 10068 RMD160 2f4488a9457a3f3fcc53746e1efb1194b08ec776 SHA1 a4b6da530222840174b3500856b1b3da91c482e8 SHA256 cd1df736f0ca3facec726b324385e10103090d12fe7a6ad571c21a1f7d45ae4a
+EBUILD unrealircd-3.2.8.1.ebuild 4668 RMD160 61a4283a897feb11103e8cd6a8b6e555645a60f9 SHA1 a742d313d5af770ac1e55aa53068fff32e98d700 SHA256 c26c644b8f164d40fc062cbfd21f138dd3437955ed3147cb88553b1df0a14996
+MISC ChangeLog 10287 RMD160 ad6753da63890f8771b2395275757a648b864054 SHA1 8eb476f0dac1e2c9f8aca372ee63b9fb189c7e8a SHA256 d58ed865ace3f27755aa261eab5dffbcf80c6f77f0e54ae486e39e853a805b56
 MISC metadata.xml 831 RMD160 1c4d3c26f080417af9af3b86d92315febfa31549 SHA1 f0697d35ac29692f18153216d46f3439a3c95410 SHA256 b71bc394366c609646cf3f371e9956ac27b854a4bda17cf6c934f1e95aa0a844
